--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -1184,6 +1184,18 @@ Ensure the default browser behavior of the `hidden` attribute.
   .md\:max-w-xl {
     max-width: 36rem;
   }
+
+  .md\:max-w-2xl {
+    max-width: 42rem;
+  }
+
+  .md\:max-w-xs {
+    max-width: 20rem;
+  }
+
+  .md\:max-w-prose {
+    max-width: 65ch;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -1407,6 +1419,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .lg\:max-w-2xl {
     max-width: 42rem;
+  }
+
+  .lg\:max-w-xs {
+    max-width: 20rem;
   }
 
   .lg\:grid-cols-3 {
